--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -22,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,5 +43,6 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^4.3.3"
-  }
+  },
+  "homepage": "https://nghiatv.github.com/country"
 }
